--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,9 @@
 dependencies:
-  pre:
-    - sudo apt-get install libvtk5 libvtk5-devel
-  post:
-    - mkdir build && cd build && cmake . && make -j 2
+  override:
+    pre:
+      - sudo apt-get install libvtk5 libvtk5-devel
+    post:
+      - mkdir build && cd build && cmake . && make -j 2
 test:
   override:
     - echo 1 #make test or something needed
