--- a/circle.yml
+++ b/circle.yml
@@ -1,9 +1,9 @@
 dependencies:
   override:
     - sudo apt-get update
-    - sudo apt-get install libvtk5.8 libvtk5.8-devel
-    - mkdir build && cd build && cmake . && make -j 2
+    - sudo apt-get install libvtk5.8 libvtk5-devel
+    - mkdir build && cd build && cmake .. && make -j 2
 test:
   override:
-    - cd  build && make install
+    - cd  build && sudo make install
     
